@@ -1,3 +1,7 @@
+	* Changed supybot.log.timestampFormat to specially handle the
+	empty string -- if it's set to the empty string, it will log
+	times in seconds-since-epoch format.
+	
 	* Added supybot.plugins.Weather.convert, which determines whether
 	or not Weather.{weather,cnn,ham} will convert temperature to the
 	configured temperatureUnit.
